tests/fixtures/LatestTests/ContainerTests/errors/array_init_type_mismatch_error.fg
/; EXPECT_ERROR: InitializerExpressionTypeMismatch
var a:int[5] = [[2,3], [2,3]]
